# absorpig

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-publish.yml
docs/: index.ipynb
docs/assets/: absorption_spectrum.csv  synechocystis_absorption_spectra.csv
src/absorpig/: __init__.py  __main__.py  _plot_utils.py  data.py  files.py
src/absorpig/data/: Qexp_itegralfraction_subs.pickle  cell_diameter_distribution.csv  pigment_concentrations.csv  pigment_shifts.csv  pigment_shifts_orig.csv  pigment_spectra.csv  pigment_spectra_raw.csv
